<resources>
    <string name="app_name">Netclan Explorer</string>
    <string name="menu">icon_menu</string>
    <string name="hello_user">Hello user</string>
    <string name="location">Location</string>
    <string name="icon_refine">icon_refine</string>
    <string name="refine">Refine</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="ab">UN</string>
    <string name="username">user name</string>
    <string name="loc_dev">location | Android developer</string>
    <string name="within">Within 4 KM</string>
    <string name="hii_community">Hii community!</string>
    <string name="coffie_friendship_business">Coffee | Friendship | Business</string>
    <string name="invite">+ INVITE</string>
    <string name="explore">explore</string>
    <string name="icon_call">icon_call</string>
    <string name="add_friend">add friend</string>
    <string name="tv_refine">Refine</string>
    <string name="back_arrow">back arrow</string>
    <string name="select_your_availability">Select Your Availability</string>
    <string name="add_your_status">Add Your Status</string>
    <string name="hi_community_i_am_open_to_new_connection">Hi community! I am open to new connection \"😊\"</string>
    <string name="select_hyper_local_distance">Select Hyper local Distance</string>
    <string name="purpose">Purpose</string>
    <string name="select_purpose">Select Purpose</string>
    <string name="save_explore"><![CDATA[Save & Explore]]></string>
</resources>
