<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RefineActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tabLayout">
        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_arrow"
            android:src="@drawable/icon_back_arrow"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:text="@string/tv_refine"
            android:layout_marginStart="40dp"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/select_your_availability"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/add_your_status"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etStatus"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_refine_status"
            android:gravity="top"
            android:inputType="text"
            android:paddingStart="8dp"
            android:paddingTop="5dp"
            android:paddingEnd="2dp"
            android:text="@string/hi_community_i_am_open_to_new_connection"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:importantForAutofill="no"
           android:hint="@string/add_your_status" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/select_hyper_local_distance"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.example.netclanexplorer.CustomSeekBar
            android:id="@+id/seekBar"
            android:layout_width="370dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:max="100"
            android:min="0" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/select_purpose"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <include layout="@layout/custome_radio_btn" />
            <include layout="@layout/custome_radio_btn"/>
            <include layout="@layout/custome_radio_btn"/>
            <include layout="@layout/custome_radio_btn"/>
        </LinearLayout>
        <LinearLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <include layout="@layout/custome_radio_btn" />
        <include layout="@layout/custome_radio_btn"/>
        <include layout="@layout/custome_radio_btn"/>
        <include layout="@layout/custome_radio_btn"/>
    </LinearLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_explore"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/toolbar"
           />
    </LinearLayout>
</RelativeLayout>