<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="220dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/tvInvite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/invite"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"/>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:layout_marginTop="30dp"
    android:layout_marginStart="80dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/username"
        />
    <TextView
        android:id="@+id/tvLocation"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/black"
    android:textSize="15sp"
    android:text="@string/loc_dev"
    />
    <TextView
        android:id="@+id/tvDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/within"
        />
    <ProgressBar
        android:id="@+id/progressBarDistance"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      android:progressDrawable="@drawable/bg_progressbar"
        android:layout_marginTop="5dp"
        android:max="100"
        android:progress="50"
        android:progressTint="#74858f"
        android:progressBackgroundTint="#d2d2d2"/>



</LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coffie_friendship_business"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvMsgToCommunity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hii_community"
            android:textColor="@color/black"
            />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="20dp"
        android:layout_marginStart="10dp"
        app:cardBackgroundColor="#b8c5cd"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias=".35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
<TextView
    android:id="@+id/tvUserLogo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/ab"
    android:layout_gravity="center"
    android:textColor="#143d59"
    android:textSize="50sp"
   />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>